--- a/src/style.css
+++ b/src/style.css
@@ -1,20 +1,42 @@
-*
-{
-    margin: 0;
-    padding: 0;
+* {
+  margin: 0;
+  padding: 0;
 }
 
 html,
-body
-{
-    height: 100vh;
-    font-family: 'Poppins';
+body {
+  height: 100vh;
+  font-family: 'Poppins', sans-serif;
+  background-color: rgb(24, 24, 24);
 }
 
-.webgl
-{
-    position: fixed;
-    top: 0;
-    left: 0;
-    outline: none;
+body {
+  overflow-x: hidden;
+}
+
+.webgl {
+  position: absolute;
+  top: 0;
+  left: 0;
+  outline: none;
+  mix-blend-mode: exclusion;
+}
+
+.container {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  margin-top: 360px;
+}
+
+h1 {
+  font-size: clamp(5rem, 10vw + 1rem, 8rem);
+  text-transform: uppercase;
+  color: #fff;
+  text-align: center;
+  clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
+}
+
+section {
+  height: 100vh;
 }
